--- a/styles/sass/partials/_media_queries.scss
+++ b/styles/sass/partials/_media_queries.scss
@@ -6,10 +6,20 @@
         font-size: 1rem;
     }
 
-    nav .wrapper {
-        
-        margin-right:0;
+    header #header-accent {
+        width: 170px;
     }
+
+    nav {
+        .wrapper {
+            margin-right:0;
+            ul li {
+                padding:0; 
+            }
+        }
+
+    }
+    
     .about {
         .wrapper {
             display: block;
@@ -25,6 +35,7 @@
         height:50vh;
         
     }
+
 
     button {
         margin:0 auto;
