--- a/styles/styles.css
+++ b/styles/styles.css
@@ -431,6 +431,7 @@ header {
   height: 65vh;
   background-color: #fdf3b3;
   position: relative;
+  transition: ease all 0.5s;
 }
 header .header-text {
   width: -webkit-max-content;
@@ -451,6 +452,8 @@ header h1 {
           animation: typing 2.5s steps(30, end) forwards, blink-caret 0.75s step-end infinite;
 }
 header #header-accent {
+  width: 246px;
+  transition: ease all 0.5s;
   position: absolute;
   right: 10%;
   bottom: -15%;
@@ -832,8 +835,15 @@ footer .footer-text {
     font-size: 1rem;
   }
 
+  header #header-accent {
+    width: 170px;
+  }
+
   nav .wrapper {
     margin-right: 0;
+  }
+  nav .wrapper ul li {
+    padding: 0;
   }
 
   .about .wrapper {
